--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,20 +1,17 @@
 version: '3'
 services:
   web:
+    # build: .
     image: leroy971/demo:v1
     restart: always
     environment:
       - DB_HOST=db
-      - DB_NAME=mydatabase
-      - DB_USER=myuser
-      - DB_PASSWORD=mypassword
     ports:
       - "5000:5000"
     volumes:
       - ./app.py:/app/app.py
     depends_on:
       - db
-
   db:
     image: postgres:latest
     restart: always
