--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -8,13 +8,18 @@ on:
 
 
 jobs:
-  tests:
+  tests_unitaires:
     runs-on: ubuntu-latest
 
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+    - 
+      name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+          python-version: 3.8
 
 
     - name: Install dependencies
