--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -24,3 +24,7 @@ jobs:
 
     - name: Install dependencies
       run: ls -l
+# deployer l'application avec docker compose pour réaliser les tests unitaires
+    - name: Run unit tests
+      run: python tests_main.py
+# supprimer les containers docker créés pour réaliser les tests
