--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -26,6 +26,6 @@ jobs:
       run: ls -l
 # deployer l'application avec docker compose pour réaliser les tests unitaires
     - name: Run unit tests
-      run: python tests_main.py
+      run: python test_main.py
       working-directory: ./formation-devops-training
 # supprimer les containers docker créés pour réaliser les tests
