--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -38,8 +38,14 @@ jobs:
 
       # Deployer l'application avec docker compose pour réaliser les tests unitaires
       - name: Run unit tests
-        run: python test_main.py
-
+         run: |
+            docker run -d -i --name unit_tests --network  formation-devops-training_default \
+              -v $PWD:/opt/formation-devops-training \
+              -w /opt/formation-devops-training
+            python:3.10-slim bash
+            docker exec -i unit_tests python3 -m pip install -r requirements.txt
+            docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
+            
       # Supprimer les containers docker créés pour réaliser les tests
       - name: Stop and remove Docker containers
         run: |
