--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,4 +1,4 @@
-name: CI/CD demo
+name: CI/CD démo
 
 on: 
   push:
@@ -11,43 +11,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Récupérer le dépôt
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Configurer Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
-      - name: Build and run Docker containers
+      - name: Construire et lancer les conteneurs Docker
         run: |
           mkdir postgresql_data
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 5
+          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
 
-      - name: Show containers
+      - name: Afficher les conteneurs
         run: |
           docker-compose -f docker-compose-dev.yml ps
           docker network ls
 
-      - name: Install dependencies
+      - name: Installer les dépendances
         run: |
           python -m pip install -r requirements.txt
           ls -l
 
-      # Deployer l'application avec docker compose pour réaliser les tests unitaires
-      - name: Run unit tests
-         run: |
-            docker run -d -i --name unit_tests --network  formation-devops-training_default \
-              -v $PWD:/opt/formation-devops-training \
-              -w /opt/formation-devops-training
+      - name: Exécuter les tests unitaires
+        run: |
+          docker run -d -i --name unit_tests --network formation-devops-training_default \
+            -v $PWD:/opt/formation-devops-training \
+            -w /opt/formation-devops-training \
             python:3.10-slim bash
-            docker exec -i unit_tests python3 -m pip install -r requirements.txt
-            docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
-            
-      # Supprimer les containers docker créés pour réaliser les tests
-      - name: Stop and remove Docker containers
+          docker exec -i unit_tests python3 -m pip install -r requirements.txt
+          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
+
+      - name: Arrêter et supprimer les conteneurs Docker
         run: |
           docker-compose -f docker-compose-dev.yml down
           rm -rf postgresql_data
