--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install dependencies
         run: python -m pip install -r requirements.txt
+         
+          
 
       - name: Install Docker Compose
         run: |
@@ -39,19 +41,22 @@ jobs:
           docker-compose -f docker-compose-dev.yml ps
           docker network ls
 
-      - name: Install Python dependencies inside the Docker container
+      - name: Install dependencies
         run: |
-          docker exec -i formation-devops-training_default python -m pip install -r /opt/formation-devops-training/requirements.txt
+          python -m pip install -r requirements.txt
+          ls -l
 
+      # Deployer l'application avec docker compose pour réaliser les tests unitaires
       - name: Run unit tests
         run: |
-          docker exec -i formation-devops-training_default python3 /opt/formation-devops-training/test_main.py
+          docker run -d -i --name unit_tests --network formation-devops-training_default \
+            -v $PWD:/opt/formation-devops-training \
+            -w /opt/formation-devops-training \
+            python:3.10-slim bash
+          docker exec -i unit_tests python3 -m pip install -r requirements.txt
+          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
       - name: Run integration test
         run: |
-          docker exec -i formation-devops-training_default pytest /opt/formation-devops-training/test_e2e.py
-
-      - name: Stop and remove Docker containers
-        run: |
-          docker-compose -f docker-compose-dev.yml down
-          rm -rf postgresql_data
+          pytest test_e2e.py
+  
