--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -54,5 +54,9 @@ jobs:
 
       - name: Run integration test
         run: |
-          pytest test_e2e.py
-  
+          docker run -d -i --name int_tests --network formation-devops-training_default \
+            -v $PWD:/opt/formation-devops-training \
+            -w /opt/formation-devops-training \
+            python:3.10-slim bash
+          docker exec -i int_tests python3 -m pip install -r requirements.txt
+          docker exec -i int_tests python3 /opt/formation-devops-training/test_e2e.py
