--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -64,7 +64,7 @@ jobs:
 
   deploy:
     runs-on: self-hosted
-    needs: [tests] 
+    needs: [tests_unitaires] 
 
     steps:
       - name: Checkout repository
