--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -70,10 +70,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker login as root
         run: |
-          sudo docker login u- ${{ secrets.DOCKER_USERNAME}} -p '${{ secrets.DOCKER_PASSWORD }}'
+         sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
 
       - name: Build and run Docker container
         run: |
@@ -84,4 +89,4 @@ jobs:
 
       - name: Show containers
         run: |
-          sudo docker ps
+          sudo docker
