--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -7,6 +7,24 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  Build + push:
+
+
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+          
+      - name: Build
+        run: docker build leroy971/demo:v2
+
+      - name: Push
+        run: docker push leroy971/demo:v2
+
   tests_unitaires:
     runs-on: ubuntu-latest
 
@@ -26,7 +44,9 @@ jobs:
 
       - name: Build and run Docker containers
         run: |
+
           mkdir postgresql_data
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
@@ -83,10 +103,11 @@ jobs:
 
       - name: Build and run Docker container
         run: |
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
           mkdir postgresql_data
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
+          sleep 10  
 
       - name: Show containers
         run: |
