--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  Build + push:
+  Build and push:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +27,9 @@ jobs:
         run: docker push leroy971/demo:v2
 
   tests_unitaires:
+
     runs-on: ubuntu-latest
+    needs: [Build and push]
 
     steps:
       - name: Checkout repository
