--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  Build and push:
+  Build_and_push:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
   tests_unitaires:
 
     runs-on: ubuntu-latest
-    needs: [Build and push]
+    needs: [Build_and_push]
 
     steps:
       - name: Checkout repository
