--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -21,7 +21,7 @@ jobs:
 
 
       - name: Build
-        run: docker build -t leroy971/demo:v2 .
+        run: docker build -t leroy971/demo:v2 -f docker/Dockerfile .
 
       - name: Push
         run: docker push leroy971/demo:v2
