--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
 
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+        
       - name: Docker Login
         uses: docker/login-action@v2
         with:
@@ -21,7 +25,7 @@ jobs:
 
 
       - name: Build
-        run: docker build -t leroy971/demo:v2 -f docker/Dockerfile .
+        run: docker build -t leroy971/demo:v2 .
 
       - name: Push
         run: docker push leroy971/demo:v2
