--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -81,8 +81,8 @@ jobs:
 
       - name: Run integration test
         run: |
-          pystest tests_e2e.py
-          
+          pytest tests_e2e.py
+
   deploy:
 
     runs-on: self-hosted
