--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Run integration test
         run: |
-          pytest tests_e2e.py
+          pytest test_e2e.py
 
   deploy:
 
