--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -20,6 +20,9 @@ jobs:
         id: vars
         run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
+      - name: Debug APP_VERSION
+        run: echo "APP_VERSION=${{ env.APP_VERSION }}"
+
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
@@ -29,12 +32,14 @@ jobs:
       - name: Build Docker image
         id: build
         run: |
+          echo "Building Docker image with tag: ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}"
           docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} .
           docker tag ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} ${{ secrets.DOCKER_USERNAME }}/demo:latest
           echo "IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Push Docker image
         run: |
+          echo "Pushing Docker image: ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}"
           docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/demo:latest
 
@@ -60,6 +65,7 @@ jobs:
         run: |
           mkdir -p postgresql_data
           export APP_VERSION=${{ env.APP_VERSION }}
+          echo "Using image tag: ${{ env.APP_VERSION }}"
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
@@ -103,6 +109,7 @@ jobs:
         run: |
           mkdir -p postgresql_data
           export APP_VERSION=${{ needs.build_and_push.outputs.image-tag }}
+          echo "Pulling image with tag: ${{ needs.build_and_push.outputs.image-tag }}"
           docker pull ${{ needs.build_and_push.outputs.image-tag }}
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
