--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -1,6 +1,6 @@
 name: CI/CD demo
 
-on:
+on: 
   push:
     branches:
       - main
@@ -8,9 +8,8 @@ on:
 
 jobs:
   build_and_push:
+    name: Build and Push Docker 
     runs-on: ubuntu-latest
-    outputs:
-      image-tag: ${{ steps.build.outputs.image-tag }}
 
     steps:
       - name: Checkout repository
@@ -20,9 +19,6 @@ jobs:
         id: vars
         run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
-      - name: Debug APP_VERSION
-        run: echo "APP_VERSION=${{ env.APP_VERSION }}"
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
@@ -30,16 +26,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        id: build
         run: |
-          echo "Building Docker image with tag: ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}"
           docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} .
           docker tag ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} ${{ secrets.DOCKER_USERNAME }}/demo:latest
-          echo "IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Push Docker image
         run: |
-          echo "Pushing Docker image: ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}"
           docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/demo:latest
 
@@ -63,9 +55,8 @@ jobs:
 
       - name: Build and run Docker containers
         run: |
-          mkdir -p postgresql_data
+          mkdir postgresql_data
           export APP_VERSION=${{ env.APP_VERSION }}
-          echo "Using image tag: ${{ env.APP_VERSION }}"
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
@@ -78,6 +69,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+          ls -l
           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
 
       - name: Run unit tests
@@ -85,12 +77,13 @@ jobs:
           docker run -d -i --name unit_tests --network formation-devops-training_default \
             -v $PWD:/opt/formation-devops-training \
             -w /opt/formation-devops-training \
-            python:3.10-slim bash -c "python3 -m pip install -r requirements.txt && python3 /opt/formation-devops-training/test_main.py"
+            python:3.10-slim bash
+          docker exec -i unit_tests python3 -m pip install -r requirements.txt
+          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
       - name: Run integration test
         run: |
           pytest test_e2e.py
-
   deploy:
     runs-on: self-hosted
     needs: tests_unitaires
@@ -107,10 +100,9 @@ jobs:
 
       - name: Pull and run Docker container
         run: |
-          mkdir -p postgresql_data
-          export APP_VERSION=${{ needs.build_and_push.outputs.image-tag }}
-          echo "Pulling image with tag: ${{ needs.build_and_push.outputs.image-tag }}"
-          docker pull ${{ needs.build_and_push.outputs.image-tag }}
+          mkdir postgresql_data
+          export APP_VERSION=${{ needs.build_and_push.outputs.APP_VERSION }}
+          docker pull ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
 
