--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -7,37 +7,81 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_push:
-    name: Build and Push Docker 
+
+  Build_and_push:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set APP_VERSION environment variable
-        id: vars
-        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
-      - name: Log in to DockerHub
+      - name: Docker Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} .
-          docker tag ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }} ${{ secrets.DOCKER_USERNAME }}/demo:latest
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/demo:latest
+      - name: Build
+        run: docker build -t leroy971/demo:v2 .
+
+      - name: Push
+        run: docker push leroy971/demo:v2
 
   tests_unitaires:
+
     runs-on: ubuntu-latest
-    needs: build_and_push
+    needs: [Build_and_push]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get updatename: CI/CD demo
+
+on: 
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+
+  Build_and_push:
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+      - name: Build
+        run: docker build -t leroy971/demo:v2 .
+
+      - name: Push
+        run: docker push leroy971/demo:v2
+
+  tests_unitaires:
+
+    runs-on: ubuntu-latest
+    needs: [Build_and_push]
 
     steps:
       - name: Checkout repository
@@ -55,8 +99,9 @@ jobs:
 
       - name: Build and run Docker containers
         run: |
+
           mkdir postgresql_data
-          export APP_VERSION=${{ env.APP_VERSION }}
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
@@ -70,8 +115,9 @@ jobs:
         run: |
           python -m pip install -r requirements.txt
           ls -l
-          docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
+           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
 
+      # Deployer l'application avec docker compose pour réaliser les tests unitaires
       - name: Run unit tests
         run: |
           docker run -d -i --name unit_tests --network formation-devops-training_default \
@@ -81,31 +127,114 @@ jobs:
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
+      - name: List files and permissions
+        run: |
+          ls -l /home/runner/work/formation-devops-training/formation-devops-training
+          ls -l /home/runner/work/formation-devops-training/formation-devops-training/postgresql_data
+
       - name: Run integration test
         run: |
           pytest test_e2e.py
+
   deploy:
+
     runs-on: self-hosted
-    needs: tests_unitaires
+    needs: [tests_unitaires] 
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      
+      - name: Docker Login
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull and run Docker container
+   #   - name: Docker login as root
+   #     run: |
+    #     sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
+
+      - name: Build and run Docker container
         run: |
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
           mkdir postgresql_data
-          export APP_VERSION=${{ needs.build_and_push.outputs.APP_VERSION }}
-          docker pull ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.APP_VERSION }}
+          docker-compose -f docker-compose-dev.yml build
+          docker-compose -f docker-compose-dev.yml up -d
+          sleep 10  
+
+      - name: Show containers
+        run: |
+          docker ps
+
+          sudo apt-get install -y docker-compose
+
+      - name: Build and run Docker containers
+        run: |
+
+          mkdir postgresql_data
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
+          docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
 
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml ps
+          docker network ls
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -r requirements.txt
+          ls -l
+           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
+
+      # Deployer l'application avec docker compose pour réaliser les tests unitaires
+      - name: Run unit tests
+        run: |
+          docker run -d -i --name unit_tests --network formation-devops-training_default \
+            -v $PWD:/opt/formation-devops-training \
+            -w /opt/formation-devops-training \
+            python:3.10-slim bash
+          docker exec -i unit_tests python3 -m pip install -r requirements.txt
+          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
+
+      - name: List files and permissions
+        run: |
+          ls -l /home/runner/work/formation-devops-training/formation-devops-training
+          ls -l /home/runner/work/formation-devops-training/formation-devops-training/postgresql_data
+
+      - name: Run integration test
+        run: |
+          pytest test_e2e.py
+
+  deploy:
+
+    runs-on: self-hosted
+    needs: [tests_unitaires] 
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+   #   - name: Docker login as root
+   #     run: |
+    #     sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
+
+      - name: Build and run Docker container
+        run: |
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
+          mkdir postgresql_data
+          docker-compose -f docker-compose-dev.yml build
+          docker-compose -f docker-compose-dev.yml up -d
+          sleep 10  
+
+      - name: Show containers
+        run: |
+          docker ps
