--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -7,71 +7,51 @@ on:
   workflow_dispatch:
 
 jobs:
-
   Build_and_push:
     runs-on: ubuntu-latest
-
     steps:
-
       - name: Checkout repository
         uses: actions/checkout@v2
-
-
       - name: Docker Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-
       - name: Build
         run: docker build -t leroy971/demo:v2 .
-
       - name: Push
         run: docker push leroy971/demo:v2
 
   tests_unitaires:
-
     runs-on: ubuntu-latest
     needs: [Build_and_push]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-
       - name: Install Docker Compose
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
-
       - name: Build and run Docker containers
         run: |
-
           mkdir postgresql_data
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
-
+          sleep 20  # Increase sleep time to ensure services are up
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml ps
           docker network ls
           docker logs formation-devops-training_web_1
-
-      
-
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
           ls -l
-           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
-
-      # Deployer l'application avec docker compose pour réaliser les tests unitaires
+          docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
       - name: Run unit tests
         run: |
           docker run -d -i --name unit_tests --network formation-devops-training_default \
@@ -80,43 +60,32 @@ jobs:
             python:3.10-slim bash
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
-
       - name: List files and permissions
         run: |
           ls -l /home/runner/work/formation-devops-training/formation-devops-training
           ls -l /home/runner/work/formation-devops-training/formation-devops-training/postgresql_data
-
       - name: Run integration test
         run: |
           pytest test_e2e.py
 
   deploy:
-
     runs-on: self-hosted
     needs: [tests_unitaires] 
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      
       - name: Docker Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-   #   - name: Docker login as root
-   #     run: |
-    #     sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
-
       - name: Build and run Docker container
         run: |
-         
           mkdir postgresql_data
           docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  
-
+          sleep 20  # Increase sleep time to ensure services are up
       - name: Show containers
         run: |
           docker ps
+          docker-compose -f docker-compose-dev.yml ps
