--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -1,6 +1,6 @@
 name: CI/CD demo
 
-on:
+on: 
   push:
     branches:
       - main
@@ -8,37 +8,33 @@ on:
 
 jobs:
   build_and_push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set APP_VERSION environment variable
+        id: vars
+        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
-      - name: Login to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract Git commit SHA
-        id: vars
-        run: echo "COMMIT_SHA=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
-
       - name: Build and push Docker image
         run: |
-          TAG=${{ github.run_number }}-${{ github.sha }}
-          docker build -t leroy971/demo:${TAG} .
-          docker push leroy971/demo:${TAG}
-
-      - name: Set Docker tag output
-        id: docker_tag
-        run: echo "::set-output name=tag::${{ github.run_number }}-${{ github.sha }}"
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:$APP_VERSION .
+          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:$APP_VERSION
 
   tests_unitaires:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: build_and_push
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -53,22 +49,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Create .env file with APP_VERSION
-        run: |
-          echo "APP_VERSION=${{ needs.build_and_push.outputs.tag }}" > .env
-
       - name: Build and run Docker containers
         run: |
-          mkdir postgresql_data
-          docker-compose -f docker-compose-dev.yml build
+          mkdir -p postgresql_data
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 5
+          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
 
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml ps
           docker network ls
-          docker logs formation-devops-training_web_1
 
       - name: Install dependencies
         run: |
@@ -85,18 +75,38 @@ jobs:
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
-      - name: List files and permissions
-        run: |
-          ls -l /home/runner/work/formation-devops-training/formation-devops-training
-          ls -l /home/runner/work/formation-devops-training/formation-devops-training/postgresql_data
-
       - name: Run integration test
         run: |
-          pytest test_e2e.py
+          docker run -d -i --name int_tests --network formation-devops-training_default \
+            -v $PWD:/opt/formation-devops-training \
+            -w /opt/formation-devops-training \
+            python:3.10-slim bash
+          docker exec -i int_tests python3 -m pip install -r requirements.txt
+          docker exec -i int_tests python3 /opt/formation-devops-training/test_e2e.py
 
   deploy:
     runs-on: self-hosted
     needs: tests_unitaires
+
     steps:
       - name: Checkout repository
-        uses: actions/
+        uses: actions/checkout@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set APP_VERSION environment variable
+        run: echo "APP_VERSION=${{ steps.vars.outputs.APP_VERSION }}" >> $GITHUB_ENV
+
+      - name: Build and run Docker container
+        run: |
+          mkdir -p postgresql_data
+          docker-compose -f docker-compose-dev.yml up -d
+          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
+
+      - name: Show containers
+        run: |
+          docker-compose -f docker-compose-dev.yml ps
