--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    image: leroy971/demo:latest
+    image: leroy971/demo:$APP_VERSION
     environment:
       - DB_HOST=db
     ports:
