--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -52,6 +52,8 @@ jobs:
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
+          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
+
           docker-compose -f docker-compose-dev.yml up -d
           docker-compose -f docker-compose-dev.yml logs web
           sleep 10  # Increase sleep time to allow services to start
