--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,6 +10,9 @@ services:
       - ./app.py:/app/app.py
     depends_on:
       - db
+    
+    entrypoint: ["/wait-for-it.sh", "db:5432", "--", "python", "app.py"]
+ 
   db:
     image: postgres:latest
     restart: always
