--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -81,6 +81,8 @@ jobs:
       - name: Set up Flask-Migrate
         run: |
           export FLASK_APP=app.py
+          flask db init
+          flask db migrate -m "Initial migration"
           flask db upgrade
           
 
