--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -125,11 +125,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and run Docker container
+      - name: Build and run Docker container        
         run: |
-          mkdir -p postgresql_data
+          export APP_VERSION=$(date +%Y%m%d%H%M%S)
+          mkdir postgresql_data
+          docker-compose -f docker-compose-dev.yml build
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10
+          sleep 10  
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml ps
