--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,7 +2,9 @@ name: Renovate
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+     - cron: '0 0 * * *'
+       branches:
+         - main
   workflow_dispatch:
 
 jobs:
